<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.content.LanguageSelection">

    <ImageButton
        android:id="@+id/portrait_lang_header_fi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:cropToPadding="true"
        android:onClick="changeLanguage"
        android:scaleType="fitCenter"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:tag="fi"
        app:layout_constraintBottom_toTopOf="@+id/portrait_lang_header_sv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_finland_flag" />

    <ImageButton
        android:id="@+id/portrait_lang_header_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:cropToPadding="true"
        android:onClick="changeLanguage"
        android:scaleType="fitCenter"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:tag="sv"
        app:layout_constraintBottom_toTopOf="@+id/portrait_lang_header_en"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portrait_lang_header_fi"
        app:srcCompat="@drawable/ic_sweden_flag" />

    <ImageButton
        android:id="@+id/portrait_lang_header_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:cropToPadding="true"
        android:onClick="changeLanguage"
        android:scaleType="fitCenter"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:tag="en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portrait_lang_header_sv"
        app:srcCompat="@drawable/ic_united_states_of_america_flag" />

    <TextView
        android:id="@+id/landscape_lang_header_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_settings_language_eng"
        app:layout_constraintBottom_toBottomOf="@+id/portrait_lang_header_en"
        app:layout_constraintEnd_toEndOf="@+id/portrait_lang_header_en"
        app:layout_constraintStart_toStartOf="@+id/portrait_lang_header_en" />

    <TextView
        android:id="@+id/landscape_lang_header_fi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_settings_language_fin"
        app:layout_constraintBottom_toBottomOf="@+id/portrait_lang_header_fi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/landscape_lang_header_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_settings_language_swe"
        app:layout_constraintBottom_toBottomOf="@+id/portrait_lang_header_sv"
        app:layout_constraintEnd_toEndOf="@+id/portrait_lang_header_sv"
        app:layout_constraintStart_toStartOf="@+id/portrait_lang_header_sv" />

</androidx.constraintlayout.widget.ConstraintLayout>