<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HelpFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/plan_select_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_select_qr_button"
            app:layout_constraintBottom_toTopOf="@+id/plan_select_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/plan_select_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_select_code_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan_select_qr" />

        <EditText
            android:id="@+id/codeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/plan_select_code_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@+id/plan_select_code"
            app:layout_constraintEnd_toEndOf="@+id/plan_select_code"
            app:layout_constraintStart_toStartOf="@+id/plan_select_code" />

        <ScrollView
            android:id="@+id/plan_content_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plan_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="411dp" />

                <ImageView
                    android:id="@+id/plan_image"
                    android:layout_width="408dp"
                    android:layout_height="498dp"
                    android:src="@drawable/nenakannu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plan_contents"
                    tools:layout_conversion_absoluteHeight="300dp"
                    tools:layout_conversion_absoluteWidth="411dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>